src/test/contracts/negative/error_messages/type_ident_eq_ident_lpar_ident_type.religo
type foo = bar (foo type